# ShaderLoader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_release.sh  run_shader_loader.sh
shaders/: README.md  custom_compute.comp  custom_compute.comp.spv  custom_fragment.frag  custom_vertex.vert  custom_vertex.vert.spv
src/FileWatcher/Private/: FileWatcher.cpp  InotifyWatcher.cpp
src/FileWatcher/Public/: FileWatcher.h  InotifyWatcher.h
src/Private/: main.cpp  main_glfw.cpp  main_triangle_fixed.cpp  modern_shader_app.cpp
src/ShaderLoader/Private/: ShaderCompiler.cpp  ShaderLoader.cpp
src/ShaderLoader/Public/: IShaderCompiler.h  ShaderLoader.h
src/VulkanCore/Private/: MainWindow.cpp  QtVulkanWindow.cpp  VulkanContext.cpp  VulkanRenderer.cpp
src/VulkanCore/Public/: IVulkanContext.h  MainWindow.h  QtVulkanWindow.h  VulkanRenderer.h
